| Bug #3328 | I can't see group_concat_max_len in a list of variables | ||
|---|---|---|---|
| Submitted: | 29 Mar 2004 13:01 | Modified: | 5 Apr 2004 2:15 |
| Reporter: | Vasily Kishkin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S2 (Serious) |
| Version: | 4.1 | OS: | Any (Any) |
| Assigned to: | Vasily Kishkin | CPU Architecture: | Any |
[29 Mar 2004 13:01]
Vasily Kishkin
[29 Mar 2004 13:02]
Vasily Kishkin
I need to add in init_vars the next line:
{sys_group_concat_max_len.name, (char*) &sys_group_concat_max_len, SHOW_SYS},
[5 Apr 2004 2:15]
Vasily Kishkin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
