BUG#3328 I can't see group_concat_max_len in a list of variables